--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.24.2",
     "express": "^4.18.2",
+    "gxai": "^1.5.1",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
     "replicate": "^1.3.1",
